# minimal-voice-assistant

./: .gitignore  config.py  pyproject.toml  requirements.txt  run.sh  setup.sh  voice_assistant.py  voice_assistant_ascii.py
ssl_certs/: cert.pem  key.pem
