[project]
name = "voice-assistant"
version = "0.1.0"
description = "Real-time Voice Assistant with FastRTC WebRTC Streaming"
authors = [
    { name = "Voice Assistant Team", email = "info@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["voice", "assistant", "ai", "speech", "webrtc", "tts", "asr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.117.1",
    "faster-whisper>=1.2.0",
    "fastrtc[vad]>=0.0.33",
    "funasr>=1.2.7",
    "gradio>=4.0.0",
    "kokoro-onnx>=0.4.9",
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "misaki[en]>=0.9.4",
    "numpy>=2.3.3",
    "ollama>=0.5.4",
    "onnxruntime>=1.22.1",
    "phonemizer>=3.3.0",
    "pip>=25.2",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.36.0",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
